# zed-motoko

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  extension.toml
.github/workflows/: release.yml
assets/: zed_motoko_icon_256.avif
languages/candid/: brackets.scm  config.toml  highlights.scm  outline.scm
languages/motoko/: brackets.scm  config.toml  highlights.scm  imports.scm  indent.scm  indents.scm  injections.scm  outline.scm  overrides.scm  tasks.json  textobjects.scm
src/: language_servers.rs  motoko.rs  server.rs
src/language_servers/: candid.rs  motoko.rs
