[package]
name = "zed-motoko"
version = "0.0.3"
edition = "2024"
publish = false
license = "Apache-2.0"
authors = ["Yota Inomoto <yota@perforate.org>"]
description = "Zed extension adding Motoko language Support"
keywords = ["zed", "motoko"]
categories = ["development-tools"]

[lib]
path = "src/motoko.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"
